作成: 初期ページの作成

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,15 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Eclipse
+.settings
+.project
+.pydevproject
+
+# Python
+*.pyc
+
+# Sublime
+*.sublime-project
+*.sublime-workspace
